[project]
name = "project"
version = "0.0.2"
requires-python = "==3.12.7"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.31.0",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "psycopg[binary]==3.2.3",
    "alembic==1.13.3",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "httpx==0.27.2",
    "coverage==7.6.1",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL"  # Pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
strict = true
