[project]
name = "project"
version = "0.0.2"
requires-python = "==3.12.7"
dependencies = [
    "pydantic-settings==2.6.0",
    "pydantic==2.9.2",
]

[project.optional-dependencies]
fastapi = [
    "fastapi==0.115.2",
    "uvicorn==0.32.0",
]
sqlalchemy = [
    "sqlalchemy==2.0.36",
]

[tool.uv]
dev-dependencies = [
    "coverage==7.6.3",
    "httpx==0.27.2",
    "mypy==1.12.0",
    "pytest-env==1.1.5",
    "pytest==8.3.3",
    "ruff==0.7.0",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL"  # Pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
env = [
    "DATABASE_TYPE=sqlalchemy",
]
