[project]
name = "project"
version = "0.0.2"
requires-python = "==3.12.7"
dependencies = [
    "pydantic-settings==2.6.0",
    "pydantic==2.9.2",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi[standard]>=0.115.5",
]
sqlalchemy = [
    "sqlalchemy==2.0.36",
]

[tool.uv]
dev-dependencies = [
    "coverage==7.6.7",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "pytest-env==1.1.5",
    "pytest==8.3.3",
    "ruff==0.8.0",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL"  # Pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
env = [
    "DATABASE_TYPE=sqlalchemy",
]
